--- a/src/css/practical-information.css
+++ b/src/css/practical-information.css
@@ -81,6 +81,7 @@
     flex-direction: column;
     padding-bottom: 4rem;
     align-content: center;
+    align-items: center;
 }
 
 #accessibility  {
@@ -108,6 +109,7 @@
 
     #practical-information-banner {
         background-size: cover;
+        padding-top: 3rem;
     }
 
     #opening-hours-practical-information-container, #location-container {
@@ -123,7 +125,4 @@
         font-size: 2rem;
     }
 
-    /* #opening-hours-practical-information-container {
-        top: none;
-    } */
 }
